--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,97 +16,144 @@
         <div id="header__logo__home"></div>
     </header>
     <section>
-        <div class="loader"><div class="loader__mini"></div></div>
-    <div id="content-home">
-        
-        
+        <div class="loader">
+            <div class="loader__mini"></div>
+        </div>
+        <div id="content-home">
+
+
             <div class="information">
                 <div class="information__localisation">
                     <div class="information__localisation__image"><i class="fas fa-map-marker-alt"></i></div>
-                    <div class="information__localisation__titre"><p>Paris, Belleville</p></div>
+                    <div class="information__localisation__titre">
+                        <p>Paris, Belleville</p>
+                    </div>
                 </div>
                 <div class="information__reservation">
-                    <div class="information__reservation__titre"><p>Réservez le menu qui vous convient</p></div>
-                    <div class="information__reservation__texte"><p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p></div>
+                    <div class="information__reservation__titre">
+                        <p>Réservez le menu qui vous convient</p>
+                    </div>
+                    <div class="information__reservation__texte">
+                        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+                    </div>
                     <button class="information__reservation__bouton"><p>Explorez nos restaurants</p></button>
                 </div>
-            </div>   
+            </div>
 
             <div class="fonctionnement">
-                <div class="fonctionnement__titre"><p>Fonctionnement</p></div>
+                <div class="fonctionnement__titre">
+                    <p>Fonctionnement</p>
+                </div>
                 <div class="fonctionnement__bouton">
                     <div class="fonctionnement__bouton__number">1</div>
                     <div class="fonctionnement__bouton__image"><i class="fas fa-mobile-alt"></i></div>
-                    <div class="fonctionnement__bouton__texte"><p>Choisissez un restaurant</p></div>
+                    <div class="fonctionnement__bouton__texte">
+                        <p>Choisissez un restaurant</p>
+                    </div>
                 </div>
                 <div class="fonctionnement__bouton">
                     <div class="fonctionnement__bouton__number">2</div>
-                    <div class="fonctionnement__bouton__image"><div><i class="fas fa-ellipsis-v"></i><i class="fas fa-bars"></i></div></div>
-                    <div class="fonctionnement__bouton__texte"><p>Composez votre menu</p></div>
+                    <div class="fonctionnement__bouton__image">
+                        <div><i class="fas fa-ellipsis-v"></i><i class="fas fa-bars"></i></div>
+                    </div>
+                    <div class="fonctionnement__bouton__texte">
+                        <p>Composez votre menu</p>
+                    </div>
                 </div>
                 <div class="fonctionnement__bouton">
                     <div class="fonctionnement__bouton__number">3</div>
                     <div class="fonctionnement__bouton__image"><i class="fas fa-store"></i></div>
-                    <div class="fonctionnement__bouton__texte"><p>Dégustez au restaurant</p></div>
+                    <div class="fonctionnement__bouton__texte">
+                        <p>Dégustez au restaurant</p>
+                    </div>
                 </div>
-            </div>  
+            </div>
             <div class="restaurant">
                 <div class="restaurant__titre">Restaurants</div>
-                <a href="La palette du goût.html">
+                <a href="la_palette_du_gout.html">
                     <div class="restaurant__card">
-                        <div id="imageRestaurant1"class="restaurant__card__image">
+                        <div id="imageRestaurant1" class="restaurant__card__image">
                             <div class="restaurant__card__image__status">Nouveau</div>
                         </div>
                         <div class="restaurant__card__description">
                             <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre"><p>La palette du goût</p></div>
-                                <div class="restaurant__card__description__texte__localisation"><p>Ménilmontant</p></div>
+                                <div class="restaurant__card__description__texte__titre">
+                                    <p>La palette du goût</p>
+                                </div>
+                                <div class="restaurant__card__description__texte__localisation">
+                                    <p>Ménilmontant</p>
+                                </div>
                             </div>
-                            <div class="restaurant__card__description__logo"><div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div><div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div></div>
+                            <div class="restaurant__card__description__logo">
+                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                            </div>
                         </div>
                     </div>
-                    </a>
-                    <a href="La note enchantée.html">
+                </a>
+                <a href="la_note_enchantee.html">
                     <div class="restaurant__card">
                         <div id="imageRestaurant2" class="restaurant__card__image">
                             <div class="restaurant__card__image__status">Nouveau</div>
                         </div>
                         <div class="restaurant__card__description">
                             <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre"><p>La note enchantée</p></div>
-                                <div class="restaurant__card__description__texte__localisation"><p>Charonne</p></div>
+                                <div class="restaurant__card__description__texte__titre">
+                                    <p>La note enchantée</p>
+                                </div>
+                                <div class="restaurant__card__description__texte__localisation">
+                                    <p>Charonne</p>
+                                </div>
                             </div>
-                            <div class="restaurant__card__description__logo"><div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div><div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div></div>
+                            <div class="restaurant__card__description__logo">
+                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                            </div>
 
                         </div>
                     </div>
-                    </a>
-                    <a href="A la française.html">
+                </a>
+                <a href="a_la_francaise.html">
                     <div class="restaurant__card">
                         <div id="imageRestaurant3" class="restaurant__card__image">
-                        </div>                     
+                        </div>
                         <div class="restaurant__card__description">
                             <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre"><p>A la française</p></div>
-                                <div class="restaurant__card__description__texte__localisation"><p>Cité Rouge</p></div>
+                                <div class="restaurant__card__description__texte__titre">
+                                    <p>A la française</p>
+                                </div>
+                                <div class="restaurant__card__description__texte__localisation">
+                                    <p>Cité Rouge</p>
+                                </div>
                             </div>
-                            <div class="restaurant__card__description__logo"><div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div><div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div></div>
-                        </div></a>
-                    </div>
-                    <a href="Le délice des sens.html">
+                            <div class="restaurant__card__description__logo">
+                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                            </div>
+                        </div>
+                </a>
+                </div>
+                <a href="le_délice_des_sens.html">
                     <div class="restaurant__card">
                         <div id="imageRestaurant4" class="restaurant__card__image">
                         </div>
                         <div class="restaurant__card__description">
                             <div class="restaurant__card__description__texte">
-                                <div class="restaurant__card__description__texte__titre"><p>Le délice des sens</p></div>
-                                <div class="restaurant__card__description__texte__localisation"><p>Folie-Méricourt</p></div>
+                                <div class="restaurant__card__description__texte__titre">
+                                    <p>Le délice des sens</p>
+                                </div>
+                                <div class="restaurant__card__description__texte__localisation">
+                                    <p>Folie-Méricourt</p>
+                                </div>
                             </div>
-                            <div class="restaurant__card__description__logo"><div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div><div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div></div>
+                            <div class="restaurant__card__description__logo">
+                                <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
+                                <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
+                            </div>
 
                         </div>
                     </div>
-                     </a>
+                </a>
             </div>
         </div>
     </section>
@@ -114,14 +162,24 @@
             <div class="footer__logo"></div>
             <div class="footer__texte">
                 <div class="footer__texte__image"><i class="fas fa-utensils"></i></div>
-                <div class="footer__texte__texte"><p>Proposez un restaurant</p></div>
+                <div class="footer__texte__texte">
+                    <p>Proposez un restaurant</p>
+                </div>
             </div>
             <div class="footer__texte">
                 <div class="footer__texte__image footer__texte__image__2"><i class="fas fa-hands-helping"></i></div>
-                <div class="footer__texte__texte"><p>Devenir partenaire</p></div>
+                <div class="footer__texte__texte">
+                    <p>Devenir partenaire</p>
+                </div>
             </div>
-            <div class="footer__texte__texte"><p>Mention légales</p></div>
-            <div class="footer__texte__texte"><a href="mailto:EMAILADDRESS"><p>Contact</p></a></div>
+            <div class="footer__texte__texte">
+                <p>Mention légales</p>
+            </div>
+            <div class="footer__texte__texte">
+                <a href="mailto:EMAILADDRESS">
+                    <p>Contact</p>
+                </a>
+            </div>
 
         </div>
 
@@ -130,4 +188,5 @@
 
     </section>
 </body>
+
 </html>
