changement noms de pages

--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
                     </div>
                 </div>
             </div>
+            <!-- TODO AJOUTER SECTION -->
             <div class="restaurant">
                 <div class="restaurant__titre">Restaurants</div>
+
                 <a href="la_palette_du_gout.html">
                     <div class="restaurant__card">
                         <div id="imageRestaurant1" class="restaurant__card__image">
@@ -83,14 +85,19 @@
                                 <div class="restaurant__card__description__texte__localisation">
                                     <p>Ménilmontant</p>
                                 </div>
+
+
                             </div>
+
                             <div class="restaurant__card__description__logo">
                                 <div><i class="restaurant__card__description__logo__1 far fa-heart"></i></div>
                                 <div><i class="restaurant__card__description__logo__2 fas fa-heart"></i></div>
                             </div>
                         </div>
+
                     </div>
                 </a>
+
                 <a href="la_note_enchantee.html">
                     <div class="restaurant__card">
                         <div id="imageRestaurant2" class="restaurant__card__image">
