correction de bugs d'affichage et repositionement des titres

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </div>
                 </a>
                 </div>
-                <a href="le_délice_des_sens.html">
+                <a href="le_delice_des_sens.html">
                     <div class="restaurant__card">
                         <div id="imageRestaurant4" class="restaurant__card__image">
                         </div>
